fixing the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,27 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  @apply bg-[#f1f1f1];
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-secondary/50 ;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-secondary/70 ;
+}
+
 .translate-z-0 {
   transform: translateZ(0px);
 }
